# my_projects

./: FIFA_2019_data_preprocessing_v2.ipynb  FOSS_Contribution_Guidelines.ipynb  IncomeGroupClassification_CaseStudy_AIML.ipynb  Pablo_Moreno_CardioGoodFitness_project.ipynb  README.md  SLR_MLS2_AnimeRatingPrediction.ipynb  USL_MLS1_EngineeringCollege.ipynb  USL_W1_AdditionalCaseStudy_ProductSegmentation.ipynb  app.py  clasificacion_anomalias_tarjeta_credito_tiempo_real_river.ipynb  clientes_gbr_api.pkl  clientes_gbr_api.py  create_data_warehouse_sql  darts_timeseries.ipynb  gradio_app.ipynb  merge_de_fechas_diferente_horizonte_temporal.ipynb  prophet.ipynb  quant_backtesting.html  quant_backtesting.ipynb  quant_backtesting_vectorbt.ipynb  quant_backtesting_with_forecasting.ipynb  synthetic_data_classification_ml.ipynb
AI Agents/: AI_agents_smolagents.ipynb  Appendix-Tips_and_Help.ipynb  CrewAI_1_multiagent_research_write_article.ipynb  CrewAI_2_multiagent_customer_support_webscrapper.ipynb  CrewAI_3_multiagent_tools_customer_outreach.ipynb  CrewAI_4_multiagent_tasks_event_planning.ipynb  CrewAI_5_multiagent_collaboration_financial_analysis.ipynb  CrewAI_6_multiagent_job_application_crew.ipynb  CrewAI_7_multiagent_PM_status_reporter.ipynb  CrewAI_7_multiagent_yaml_project_planning.ipynb  CrewAI_8_multiagent_agentic_sales_pipeline.ipynb  CrewAI_8_multiagent_support_data_insight_analysis.ipynb  CrewAI_multiagent_accounting_report.py  (+23 more)
AI Agents/crewai_prod/: CrewAI_multiagent_supply_chain_doc_validator.py  CrewaI_agents_in_prod.ipynb  README.md  pyproject.toml  report.md
(+91 files in other folders)
